--- a/README
+++ b/README
@@ -1,1 +1,3 @@
 Open source XML scripts for Aastra SIP phones as issued by Aastra
+
+I provide absolutely no support, they are merely stored here for my convenience and for anyone else who needs a copy.
