Add user manual

--- a/README
+++ b/README
@@ -1,3 +1,5 @@
 Open source XML scripts for Aastra SIP phones as issued by Aastra
 
 I provide absolutely no support, they are merely stored here for my convenience and for anyone else who needs a copy.
+
+I am missing some user manuals, if you know of a version on the 'net that is newer than the versions in /User_Manuals please let me know where to find it.
